fix: fixed layout sizes and aligning

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -14,7 +14,7 @@ body {
   background: $background;
   color: $white;
   font-family: Roboto, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.2;
   margin: 0;
   min-width: 300px;
