--- a/src/common/components/label/styles.module.scss
+++ b/src/common/components/label/styles.module.scss
@@ -6,8 +6,8 @@
   border-radius: 2px;
   cursor: pointer;
   display: inline-flex;
-  gap: 8px;
-  padding: 2px 8px;
+  gap: 4px;
+  padding: 2px 6px;
   transition: 0.3s;
 
   &:hover {
