--- a/src/common/components/tree/styles.module.scss
+++ b/src/common/components/tree/styles.module.scss
@@ -13,8 +13,8 @@
       border-left: 1px dashed rgba($white, 0.4);
       display: block;
       list-style: none;
-      margin-left: 15px;
-      padding-left: 18px;
+      margin-left: 12px;
+      padding-left: 16px;
     }
   }
 
@@ -25,7 +25,7 @@
     padding: 0;
 
     > div:first-of-type {
-      padding-left: 8px;
+      padding-left: 6px;
     }
   }
 }
